<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/title_name"
        android:textAlignment="center"
        android:textColor="@color/title_color"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/app_pic"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:contentDescription="@string/image_desp"
        app:srcCompat="@android:drawable/star_big_on" />

    <TextView
        android:id="@+id/content_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_desp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/textButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:text="@string/buttonChange"
            android:onClick="changeTitle"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:cornerRadius="50dp" />

        <Button
            android:id="@+id/toastButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:text="@string/buttonToast"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:cornerRadius="50dp" />
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button13"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Button" />
    </HorizontalScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/scrollViewText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="4dp"
            android:width="500dp"
            android:text="@string/scrollViewText"
            android:textSize="20sp" />
    </ScrollView>

</LinearLayout>
